# TableQA-LLMAgent

./: .gitignore  README.md  collect_dataset.py  main.py  pyproject.toml  test_base_CL_python.py  test_jsonformatting.py
.github/workflows/: python-ci.yml
agenttobenamed/: __init__.py  agent.py  code_manipulation.py  coder_llms.py  llms.py  logger.py  prompts.py
csvs/: test_CSV_file_gdp.csv
dataset/: collect_dataset.py  collect_inputs_for_completion_and_filter.py  convert_xlsx_to_json.py  dataset_250.xlsx  dataset_250_gpt35_82correct_function_answers.xlsx  dataset_82.xlsx  dataset_82_coder.jsonl  dataset_changed.xlsx  dataset_changed_gpt-3_5-turbo-1106.xlsx  dataset_changed_gpt-4-1106-preview_hn-2_mdt-2.xlsx  dataset_changed_gpt-4-1106-preview_hn-2_mdt-2_2.xlsx  dataset_changed_gpt-4-1106-preview_hn-2_mdt-2_7.xlsx  dataset_clean.xlsx  dataset_clean_200.xlsx  dataset_clean_250.xlsx  dataset_clean_more.xlsx  dataset_less_than_250_without_plots_for_completion.xlsx  dataset_less_than_250_without_plots_for_instruct.xlsx  format_dataset.py  pandas_topics.txt  tmp.py
dataset/dataset_tables/: AsianAmericans.xlsx  IrishCounty.xlsx  SchumacherRaces.xlsx  Senators.xlsx  SolarPanels.xlsx  TopDivision.xlsx  _AnimeConferences_.xlsx  actors.xlsx  agriculture_analysis.xlsx  airplanes.xlsx  albums.xlsx  arm_sales.xlsx  australians.xlsx  belgian_sports.xlsx  best_songs_grammy.xlsx  big_car_data.xlsx  biomedical_image_analysis.xlsx  (+49 more)
evaluation/: collect_answers.py  evaluate_ER_plots.py  evaluate_agent.py  tagging_accuracy_test.py  test_deplot.py
tableqallmagent/: agent.py  code_manipulation.py  coder_llms.py  llms.py  logger.py  prompts.py
tests/: test_prompts_creation.py
(+435 files in other folders)
