[tool.poetry]
name = "agenttobenamed"
version = "0.1.13"
description = ""
authors = ["poludmik <michael.poludin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
openai = "^1.3.2"
pandas = "^2.1.3"
langchain = "^0.0.336"
matplotlib = "^3.8.1"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
