[tool.poetry]
name = "tableqallmagent"
version = "0.1.14"
description = ""
authors = ["poludmik <michael.poludin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
openai = "^1.3.2"
pandas = "^2.1.3"
langchain = "0.1.17"
matplotlib = "^3.8.1"
openpyxl = "^3.1.2"
autopep8 = "^2.0.4"
pytest = "^8.1.1"
torch = "^2.2.2"
transformers = "^4.39.3"
peft = "^0.10.0"
deprecated = "^1.2.14"
langsmith = "0.1.53"
langchain-anthropic = "^0.1.11"
yattag = "^1.15.2"
fastparquet = "^2024.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
